2008-06-20  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* gst/deinterlace2/Makefile.am:
	* gst/deinterlace2/tvtime/greedyh.asm:
	* gst/deinterlace2/tvtime/tomsmocomp/SearchLoopBottom.inc:
	Fix compilation on generic x86/amd64 and include deinterlace2 in the
	build system. Because of several bugs it's still enabled only
	by --enable-experimental.

2008-06-20  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/resindvd/resindvdsrc.c:
	* ext/resindvd/resindvdsrc.h:
	Schedule NAV packets and activate them with an async clock callback
	at the right moment. This makes delayed menu highlights appear
	at the correct time and fixes Back To The Future.

	When outputting new segment in do_seek(), calculate our position
	value properly, so we report the right time when popping in and
	out of the menus.

	* ext/resindvd/rsnbasesrc.c:
	When handling a non-flushing seek, accumulate the segment,
	rather than having every seek start from 0 and messing with sync

2008-06-19  Stefan Kost  <ensonic@users.sf.net>

	* gst/selector/gstoutputselector.c:
	* tests/icles/output-selector-test.c:
	  Use BOILERPLATE macro and update test to the latest api changes.

2008-06-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* examples/app/appsink-src.c: (on_new_buffer_from_source):
	Don't use a buffer after unreffing it.

2008-06-18  Stefan Kost  <ensonic@users.sf.net>

	* ext/metadata/metadataexif.c:
	  Add description tag mapping.

2008-06-18  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* examples/app/appsrc-ra.c:
	* examples/app/appsrc-seekable.c:
	* examples/app/appsrc-stream.c:
	* examples/app/appsrc-stream2.c:
	* ext/directfb/dfbvideosink.h:
	* ext/metadata/gstbasemetadata.c:
	* ext/metadata/gstbasemetadata.h:
	* ext/metadata/metadata.c:
	* ext/metadata/metadataexif.c:
	* ext/theora/theoradec.h:
	* gst/deinterlace2/gstdeinterlace2.h:
	* gst/deinterlace2/tvtime/speedy.c:
	* gst/deinterlace2/tvtime/speedy.h: